--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-range": "^1.10.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
