--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/profile/page.jsx", "components/Profile/ProfileForm.js", "app/matches/page.jsx", "components/WebSocketProvider.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/profile/page.jsx", "components/Profile/ProfileForm.js", "app/matches/page.tsx", "components/WebSocketProvider.jsx"],
   "exclude": ["node_modules"]
 }
