--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "Server for UnfoldMatch app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,10 +15,20 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
+    "mongoose": "^8.5.4",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.5.0",
+    "@types/punycode": "^2.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "nodemon": "^2.0.15",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.4"
   }
 }
